final presentation version

--- a/Projeto Mas/renewsub.html
+++ b/Projeto Mas/renewsub.html
@@ -189,7 +189,7 @@
         </div>
 
         <div class="next-button text-center">
-            <a href="./shippingadress.html" class="btn btn-orange btn-lg">
+            <a href="paymentpage.html" class="btn btn-orange btn-lg">
                 Next
             </a>
         </div>
